--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
+DYNAMODB_API_KEYS_TABLE=ApiKeys
 AWS_ACCESS_KEY_ID=AKIAUVWTPY5CLU5AFJOJ
 AWS_SECRET_ACCESS_KEY=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
 AWS_REGION=us-east-1
