--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.654.0",
     "@aws-sdk/client-s3": "^3.651.1",
     "@aws-sdk/client-ses": "^3.654.0",
+    "@aws-sdk/lib-dynamodb": "^3.654.0",
     "@aws-sdk/s3-request-presigner": "^3.651.1",
     "@netlify/functions": "^2.8.1",
     "@testing-library/jest-dom": "^5.17.0",
