--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "fs": "^0.0.1-security",
+    "jsonwebtoken": "^9.0.0",
     "jspdf": "^2.5.1",
     "multer": "^1.4.5-lts.1",
     "path": "^0.12.7",
