--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "framer-motion": "^11.11.0",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.0",
     "jspdf": "^2.5.1",
