--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^9.0.0",
     "jspdf": "^2.5.1",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.15",
     "path": "^0.12.7",
     "pdfkit": "^0.15.0",
     "react": "^18.3.1",
