ai bulk generator trying 1

--- a/backend/.env
+++ b/backend/.env
@@ -8,4 +8,5 @@ JWT_SECRET=eyJhbGciOiJIUzI1NiJ9.eyJSb2xlIjoiQWRtaW4iLCJJc3N1ZXIiOiJJc3N1ZXIiLCJV
 DYNAMODB_OTP_TABLE=OTP
 EMAIL_USER=hello.certificate4you@gmail.com
 EMAIL_PASS=wkvpeqnlckgeqydc
+GEMINI_API_KEY=AIzaSyBQJ5CFczs1jld4W11ulDBqo8iZZZ2fyR8
 
