--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "pdfkit": "^0.15.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "react-signature-canvas": "^1.0.6",
