--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "react-syntax-highlighter": "^15.5.0",
     "uuid": "^10.0.0",
     "web-vitals": "^2.1.4",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "csv-parse": "^5.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
