--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "aws-sdk": "^2.1691.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "csv-parse": "^5.5.0",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
@@ -26,6 +27,7 @@
     "jszip": "^3.10.1",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.15",
+    "parse-multipart": "^1.0.4",
     "path": "^0.12.7",
     "pdfkit": "^0.15.0",
     "react": "^18.3.1",
@@ -37,8 +39,7 @@
     "react-syntax-highlighter": "^15.5.0",
     "uuid": "^10.0.0",
     "web-vitals": "^2.1.4",
-    "xlsx": "^0.18.5",
-    "csv-parse": "^5.5.0"
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
