--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jsonwebtoken": "^9.0.0",
     "jspdf": "^2.5.1",
     "jszip": "^3.10.1",
+    "konva": "^8.4.3",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.15",
     "parse-multipart": "^1.0.4",
@@ -34,6 +35,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-konva": "^18.2.10",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "react-signature-canvas": "^1.0.6",
